[gd_scene load_steps=9 format=2]

[ext_resource path="res://scritps/game_node2d.gd" type="Script" id=1]
[ext_resource path="res://sprites/Ball.png" type="Texture" id=2]
[ext_resource path="res://sprites/PlayerRight.png" type="Texture" id=3]
[ext_resource path="res://sprites/PlayerLeft.png" type="Texture" id=4]
[ext_resource path="res://fonts/PrStart.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 5 )

[node name="GameNode2D" type="Node2D"]
script = ExtResource( 1 )

[node name="BallSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="PlayerLeftSprite" type="Sprite" parent="."]
position = Vector2( 25, 300 )
texture = ExtResource( 4 )

[node name="PlayerRightSprite" type="Sprite" parent="."]
position = Vector2( 775, 300 )
texture = ExtResource( 3 )

[node name="HUDNode" type="Node" parent="."]

[node name="PlayerLeftGoalLabel" type="Label" parent="HUDNode"]
margin_left = 330.462
margin_top = 2.92883
margin_right = 370.462
margin_bottom = 28.9288
custom_fonts/font = SubResource( 1 )
text = "99"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="XLabel" type="Label" parent="HUDNode"]
margin_left = 383.565
margin_top = 16.7808
margin_right = 423.565
margin_bottom = 42.7808
custom_fonts/font = SubResource( 2 )
text = "x"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerRigthGoalLabel" type="Label" parent="HUDNode"]
margin_left = 415.072
margin_top = 1.30482
margin_right = 465.072
margin_bottom = 27.3048
custom_fonts/font = SubResource( 3 )
text = "99"
__meta__ = {
"_edit_use_anchors_": false
}
